5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_820.log
== TEST (2019-03-28 10:27:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:35:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
x50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = x50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = x50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(x))
print(int(notas10))
print(int(notas2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:35:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
x50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = x50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = x50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(x))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.18845
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
